# rejubot

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: build.yaml
docker/: Dockerfile  start.sh  supervisord.conf
docs/: devnotes.md
migrations/: env.py
migrations/versions/: 871fe95af18a_first_version.py  a6503305e193_first_version.py
src/rejubot/: admin.py  logging.py  settings.py  storage.py  telegrambot.py  web.py
src/rejubot/templates/: channels.html  links.html  links_days.html  root.html
tests/: test_settings.py
tests/fixtures/: test_channels.toml  test_settings.toml
